# astro-rust

./: Cargo.toml  README.md  rustfmt.toml
.claude/: settings.local.json
src/: aberr.rs  angle.rs  asteroid.rs  atmos.rs  binary_star.rs  coords.rs  ecliptic.rs  interpol.rs  lunar.rs  misc.rs  nutation.rs  parallax.rs  pluto.rs  precess.rs  star.rs  sun.rs  time.rs  transit.rs  util.rs
src/orbit/: elliptic.rs  mod.rs  near_parabolic.rs  parabolic.rs
src/planet/: earth.rs  mars.rs  mod.rs
src/planet/VSOPD_87/: earth.rs  jupiter.rs  mars.rs  mercury.rs  mod.rs  neptune.rs  saturn.rs  uranus.rs  venus.rs
src/planet/jupiter/: mod.rs  moon.rs
src/planet/saturn/: mod.rs  moon.rs  ring.rs
